--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                 <ul  data-testid="test-user-social-links"
 >
                     <li data-testid="test-user-social-instagram">
-                        <a href="https://www.instagram.com/ola_k_lois/">
+                        <a target="_blank" href="https://www.instagram.com/ola_k_lois/">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </li>
                     <li data-testid="test-user-social-linkedin">
-                        <a href="https://www.linkedin.com/in/olakanmi-lois-0724a1271/">
+                        <a target="_blank" href="https://www.linkedin.com/in/olakanmi-lois-0724a1271/">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
                     </li>
                     <li data-testid="test-user-social-github">
-                        <a href="https://github.com/olalois">
+                        <a target="_blank" href="https://github.com/olalois">
                             <i class="fa-brands fa-github"></i>
                         </a>
                     </li>
