--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
                 <span class="description" data-testid="test-user-description">Front-End Developer</span>
                 <span class="location" data-testid="test-user-location">Based in Nigeria <span id="time" class="time" data-testid="test-user-time"></span></span>
             </span>
+            <nav class="navlinks" data-testid="test-contact-links">
+                <ul>
+                    <a href="/"><li>Home</li></a>
+                    <a href="/about.html"><li>About us</li></a>
+                    <a href="/contactus.html"><li>Contact Us</li></a>
+                </ul>
+            </nav>
         </section>
         <section class="container2">
             <p class="bio" data-testid="test-user-bio">
