--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav class="navlinks" data-testid="test-contact-links">
                 <ul>
                     <a href="/"><li>Home</li></a>
-                    <a href="/about.html"><li>About us</li></a>
-                    <a href="/contactus.html"><li>Contact Us</li></a>
+                    <a href="about.html"><li>About us</li></a>
+                    <a href="contactus.html"><li>Contact Us</li></a>
                 </ul>
             </nav>
         </section>
