--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
             </span>
             <nav class="navlinks" data-testid="test-contact-links">
                 <ul>
-                    <a href="/"><li>Home</li></a>
-                    <a href="/about.html"><li>About us</li></a>
-                    <a href="/contactus.html"><li>Contact Us</li></a>
+                    <a href="index.html"><li>Home</li></a>
+                    <a href="about.html"><li>About us</li></a>
+                    <a href="contactus.html"><li>Contact Us</li></a>
                 </ul>
             </nav>
         </section>
